2006-09-18  Jason R. Mastaler  <jason@mastaler.com>

	* Since all the content is now in the wiki, dump the ht2html
	template system in favor of just a simple index.html and
	accompanying css stylesheet that we can hand edit.
	
2006-09-14  Jason R. Mastaler  <jason@mastaler.com>

	* links.h: All docs now reside at wiki.tmda.net.  Just include a
	few essential links on this top-level homepage.

	* TMDAGenerator.py: Move back to blue-style template.  Remove the
	links to mirror sites - that was a PITA to maintain, and the wiki
	will now contain the definitive list.  

	* index.ht: Add a note about the docs being moved to TmdaWiki.

	* Makefile: Master site is now tmda.net rather than sourceforge,
	so we rsync to there.

2003-07-11  Tim Legant  <tim@catseye.net>

	* filter-sources.ht: Removed {from,to}-mysql documentation, moved
	-domains documentation to top, since now it is default behavior.

2003-07-09  Tim Legant  <tim@catseye.net>

	* filter-sources.ht: Added section on new sources 'from-sql' and
	'to-sql'.

2003-07-04  Tim Legant  <tim@catseye.net>

	* tmda-vdomains.ht (Title): Added information on tmda-filter's
	ability to work with virtual domains.  Removed unnecessary babble
	about how virtual domains work.  Cleaned up a few examples.  Fixed
	internal links.

2003-07-03  Jason R. Mastaler  <jason@mastaler.com>

	* upgrade.ht (Title): New file.

2003-02-05  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* config-client.ht: Added SqWebMail blurb.

2003-01-20  Tim Legant  <tim@catseye.net>

	* tmda-vdomains.ht: New file.

2002-11-04  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* inuse.ht (Links): Add Open Vistas Networking, Inc.

2002-10-31  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* inuse.ht (Links): Add the FSF.

2002-10-24  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* howto-template.ht: New file.

2002-10-03  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* inuse.ht (Links): Add Stand Blue Technology.
