@@ -38,6 +38,18 @@
     <li class="menu_subitem"><a href="http://sourceforge.net/projects/tmda" >TMDA @ Sourceforge</a></li>
     <li class="menu_subitem"><a href="tmda-cgi" >TMDA-CGI</a></li>
     <li class="menu_subitem"><a href="http://www.cafepress.com/TMDA/" >TMDA Store</a></li>
+    <li><br></li>
+    <li class="menu_item">Search TMDA sites</li>
+    <li class="menu_subitem">
+    <form id="searchbox_002623059522143297254:h56-asgw3n8" action="http://google.com/cse">
+    <input type="hidden" name="cx" value="002623059522143297254:h56-asgw3n8" />
+    <input name="q" type="text" size="15" />
+    <input type="submit" name="sa" value="Search" />
+    <input type="hidden" name="cof" value="FORID:0" />
+    </form>
+    <script type="text/javascript" src="http://google.com/coop/cse/brand?form=searchbox_002623059522143297254%3Ah56-asgw3n8"></script>
+    </li>
+
   </ul>
 </div>
 
