@@ -1,3 +1,7 @@
+2006-10-31  Jason R. Mastaler  <jason@mastaler.com>
+
+	* index.html: Add form for Google Custom Search Engine. 
+	
 2006-09-18  Jason R. Mastaler  <jason@mastaler.com>
 
 	* Since all the content is now in the wiki, dump the ht2html
